--- a/keras_CNN_fashion_minst.ipynb
+++ b/keras_CNN_fashion_minst.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Convolutional Neural Multilayer Perceptron Neural Network: fashion mnist data set\n",
+    "# Convolutional Neural Network: fashion mnist data set\n",
     "\n",
     "Bài viết trên [Machine Learning Cơ bản](https://machinelearningcoban.com/2018/07/06/deeplearning/) giới thiệu về keras bằng bộ số liệu với mô hình Multilayer Perceptron Neural Network (MLP)và đạt được mức độ chính xác là 88.4%. Tác giả bài viết có gợi ý rằng để nâng cao mức độ chính xác chúng ta nên sử dụng Convolutional Neural Networks (CNN) vì MLP bỏ qua thông tin về không gian ảnh (spatial information). \n",
     "\n",
